# pptgen

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: example_validation.yml
design_system/assets/: icon.check.yaml  icon.warning.yaml  logo.company.yaml
design_system/brands/: healthcatalyst.yaml
design_system/layouts/: grid_2x2.yaml  metric_dashboard.yaml  single_column.yaml  two_column.yaml  visual_text_split.yaml
design_system/primitives/: bullet_slide.yaml  comparison_slide.yaml  image_text_slide.yaml  (+4 more)
docs/: ARCHITECTURE_MAP.md  PROJECT_OVERVIEW.md  ado_to_pptgen_workflow.md  ai_assisted_deck_authoring_guide.md  deck-authoring-guide.md  phase10d_governance_analytics.md  pptgen_notebooklm_narrative.md  template_placeholder_inventory.md  workspace-pattern.md
examples/: architecture_overview.yaml  catalog.json  catalog.yaml  catalog_README.md  examples_README.md  executive_update.yaml  kpi_dashboard.yaml  product_strategy.yaml  weekly_ops_report.yaml
output/: test_scaffold.yaml
schemas/: deck.schema.json  deck_patterns.yaml
scripts/: create_template.py
skills/: README.md  generate_pptgen_deck_yaml_skill.md  improve_pptgen_deck_yaml.md  validate_pptgen_deck_yaml_skill.md
template/: HC_Powerpoint_Template.potx  HC_Powerpoint_Template_with_pptgen_placeholders.potx  README.md
templates/: registry.yaml
tests/: conftest.py  test_example_validation.py  test_image_caption_render.py  test_spec_layer.py
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
(+508 files in other folders)
